--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: home
-title: Bildungsmaterial
+title: Featured
 ---
-<h1>Bildungsmaterial</h1>
 
+<h1>Featured</h1>
 {% for rec in site.recommendations %}
 
 <h2>{{ rec.name }}</h2>
@@ -46,7 +46,32 @@ Themen
 </dl>
 
 
-<img src="/assets/images/{{- rec.short_name -}}.png" alt="">
+<div class="grid-container">
+{% if rec.vone %}
+<div class="image">
+<a href="https://youtu.be/{{ rec.vone }}"><img src="http://img.youtube.com/vi/{{ rec.vone }}/0.jpg"/></a>
+  </div class="image">
+{% endif %}
+{% if rec.vtwo %}
+<div class="image">
+<a href="https://youtu.be/{{ rec.vtwo }}"><img src="http://img.youtube.com/vi/{{ rec.vtwo }}/0.jpg"/></a>
+  </div class="image">
+{% endif %}
+{% if rec.vthree %}
+<div class="image">
+<a href="https://youtu.be/{{ rec.vthree }}"><img src="http://img.youtube.com/vi/{{ rec.vthree }}/0.jpg"/></a>
+  </div class="image">
+{% endif %}
+{% if rec.vfour %}
+<div class="image">
+<a href="https://youtu.be/{{ rec.vfour }}"><img src="http://img.youtube.com/vi/{{ rec.vfour }}/0.jpg"/></a>
+  </div class="image">
+{% endif %}
+</div>
+
+
+</a>
+<!-- <img src="/assets/images/{{- rec.short_name -}}.png" alt=""> -->
 
 <p>{{ rec.content | markdownify }}</p>
 {% endfor %}
