--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Featured
 ---
 
 <h1>Featured</h1>
+
+Hier sind einige empfehlenswerte Podcasts und YouTube-Kanäle.
 {% for rec in site.recommendations %}
 {% if rec.featured %}
 {% include rec_entry.html %}
