--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Featured
 
 <h1>Featured</h1>
 
-Hier sind einige empfehlenswerte Podcasts und YouTube-Kanäle.
+Hier sind einige empfehlenswerte Podcasts und YouTube-Kanäle. Vom Menü aus sind zu manchen Themen weitere Empfehlungen erreichbar.
 {% for rec in site.recommendations %}
 {% if rec.featured %}
 {% include rec_entry.html %}
