--- a/deutsch.html
+++ b/deutsch.html
@@ -3,7 +3,7 @@ layout: home
 title: Deutschsprachig
 ---
 
-<h1>Anarchismus</h1>
+<h1>Deutschsprachig</h1>
 {% for rec in site.recommendations %}
 {% if rec.language == "Deutsch" %}
 {% include rec_entry.html %}
